--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "dependencies": {
     "firebase": "^9.6.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
+    "sass": "^1.49.9",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "dotenv": "^16.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
