--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/vite-plugin-react-svg": "^0.2.0",
     "@vitejs/plugin-react": "^1.0.7",
     "dotenv": "^16.0.0",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "vite-plugin-react-svg": "^0.2.0"
   }
 }
