--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^9.6.7",
+    "@firebase/app": "^0.7.18",
+    "@reduxjs/toolkit": "^1.8.0",
+    "firebase": "9.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "sass": "^1.49.9",
     "scss": "^0.2.4"
