--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "konva": "^8.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.6",
     "react-konva": "^17.0.2-5",
+    "react-redux": "7.2.6",
     "react-router-dom": "6.2.2",
     "sass": "1.49.9",
-    "scss": "0.2.4"
+    "scss": "0.2.4",
+    "use-image": "^1.0.10"
   },
   "devDependencies": {
     "@types/react": "17.0.33",
