--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.8.0",
+    "as-bind": "^0.8.2",
     "firebase": "9.6.4",
     "konva": "^8.3.3",
     "react": "17.0.2",
@@ -15,6 +16,7 @@
     "react-konva": "^17.0.2-5",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.2",
+    "react-wasm": "^1.0.1",
     "sass": "1.49.9",
     "scss": "0.2.4",
     "use-image": "^1.0.10"
