--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-konva": "^17.0.2-5",
+    "react-konva-utils": "^0.3.0",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.2",
     "react-wasm": "^1.0.1",
