--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "as-bind": "^0.8.2",
     "firebase": "9.6.4",
     "konva": "^8.3.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-konva": "^17.0.2-5",
     "react-konva-utils": "^0.3.0",
     "react-redux": "7.2.6",
