--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.8.0",
     "as-bind": "^0.8.2",
+    "chart.js": "^3.7.1",
     "firebase": "9.6.4",
     "konva": "^8.3.3",
     "react": "17.0.2",
