--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "9.6.4",
     "konva": "^8.3.3",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "17.0.2",
     "react-konva": "^17.0.2-5",
     "react-redux": "7.2.6",
