--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.6.2",
     "@reduxjs/toolkit": "1.8.0",
     "as-bind": "^0.8.2",
     "firebase": "9.6.4",
