--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "rewrites": [
     { "source": "/", "destination": "/index.html" },
-    { "source": "/dashboard", "destination": "/index.html" }
+    { "source": "/dashboard", "destination": "/index.html" },
+    { "source": "/workspace/:id", "destination": "/index.html" }
   ]
 }
